# Prompt-Pirates-Hackathon-2026

./: .dockerignore  .env.example  .gitignore  AGENTS_DESIGN.md  CREATE_VECTOR_STORE.md  DATASET_UPDATE_SUMMARY.md  DELIVERABLES_SUMMARY.md  DEMO_SCRIPT.md  DOCKER_FIX.md  DOCKER_REBUILD_COMPLETE.md  DOCKER_RUN.md  DOCKER_SETUP_COMPLETE.md  Dockerfile.api  Dockerfile.ui  HACKATHON_PRESENTATION.md  HOW_TO_TEST_QA_AGENT.md  Hackathon_Presentation.pptx  Intelligent_Support_Incident_CoPilot.pptx  PRESENTATION_DIAGRAMS.md  PRESENTATION_GENERATION_README.md  QA_AGENT_QUICK_START.md  QA_AGENT_SUMMARY.md  QA_TESTING_GUIDE.md  QUICK_RERUN.md  QUICK_START_AGENTS.md  RAG_FIX_SUMMARY.md  README.md  RE_RUN_INSTRUCTIONS.md  RUN_PROJECT.md  Refined_Hackathon_Presentation.pptx  docker-compose.yml  pyproject.toml  requirements.txt
agents/: README_AGENTS.md  __init__.py  dataset_generator.py  education_loan_dataset_generator.py  graph.py  guardrails_agent.py  ingestion.py  intent.py  knowledge_retrieval.py  memory_agent.py  planner.py  qa_validation.py  reasoning.py  response_synthesis.py  state.py
api/: __init__.py  config.py  main.py
data/: README.md  __init__.py  chunking.py
guardrails/: __init__.py  layer.py  models.py
memory/: __init__.py  models.py  service.py  store.py  working_memory.py
scripts/: __init__.py  create_presentation.py  create_vector_store.py  diagnose_retrieval.py  docker_entrypoint.py  docker_entrypoint.sh  generate_corpus.py  index_kb.py  quick_qa_test.sh  rerun_project.py  rerun_project.sh  run_qa_validation.py  test_kb_retrieval.py  verify_rag_setup.py
(+101 files in other folders)
